[Users] Fix long usernames overlapping other content
This worked before, maybe broken somewhere in #348?

--- a/app/javascript/src/styles/common/_comment_container.scss
+++ b/app/javascript/src/styles/common/_comment_container.scss
@@ -11,6 +11,8 @@
     grid-column: 1;
     grid-row: 1;
     background: $lighten-background-5;
+    word-wrap: anywhere;
+    overflow-wrap: anywhere;
 
     .avatar {
       .post-thumbnail:not(.blacklisted) {
